[project]
name = "comfy-pack"
description = """\
    A comprehensive toolkit for standardizing, packaging and deploying ComfyUI workflows \
    as reproducible environments and production-ready REST services\
"""
authors = [{ name = "Frost Ming", email = "frost@bentoml.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bentoml>=1.3.13",
    "click>=8.1.7",
    "comfy-cli>=1.2.8",
    "git+https://github.com/comfyanonymous/ComfyUI.git",
]
dynamic = ["version"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/bentoml/comfy-pack"

[project.optional-dependencies]
litserve = [
    "litserve @ git+https://github.com/Lightning-AI/LitServe.git",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
]

[project.scripts]
comfy-pack = "comfy_pack.cli:main"
comfy-litserve = "comfy_pack.litserve.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["src/"]

[tool.pdm.version]
source = "scm"
